--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "next": "14.0.5-canary.51",
     "react": "^18",
     "react-dom": "^18"
