--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.0",
+    "@tanstack/react-query": "^5.64.2",
+    "@tanstack/react-query-devtools": "^5.64.2",
     "clsx": "^2.1.1",
-    "formik": "^2.4.6",
+    "formik": "^2.4.5",
     "next": "14.0.5-canary.51",
     "react": "^18",
     "react-dom": "^18"
